--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -32,6 +32,7 @@ button,
   justify-content: center;
   backdrop-filter: blur(14px);
   background-color: transparent;
+  color: white;
   align-items: center;
   border: none;
   transition: 0.4s;
@@ -39,7 +40,6 @@ button,
 }
 .btn:hover {
   background: rgb(255, 0, 0);
-  color: white;
 }
 
 * {
@@ -117,7 +117,7 @@ header {
   text-align: center;
   line-height: 70px;
   font-size: 40px;
-  color :red;
+  color: red;
 }
 .nav {
   display: flex;
@@ -489,10 +489,10 @@ main .section-home {
 .about-container .jobs .job .content-job {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
-  height: auto;
-  /* width: 100%; */
+  height: 100%;
+  width: 100%;
   border-radius: 6px;
   padding: 0 20px;
   transition: all 0.4s;
@@ -826,44 +826,80 @@ main .section-home {
 
 /* section drop line */
 
-.drop-line{
+.drop-line {
+  background: url(/assets/imgs/red-black-fluidjpg\ copy.jpg), center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 80%;
+  margin: auto;
+}
+.drop-line .container-drop {
   width: 85%;
   height: 100%;
-}
-.drop-line .container-drop{
-  width:auto;
-  height: 100%;
   margin: auto;
-  padding: 40px 0;
-  /* background-color: red; */
-  border: 2px solid red;
 }
-.drop-line .container-drop .drop-title{
+.drop-line .container-drop .drop-title {
   font-size: 28px;
   letter-spacing: 1.5px;
   margin: 30px auto;
 }
-.drop-line .container-drop .controll-drop{
+.drop-line .container-drop .controll-drop {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  background-color: #fff;
+  height: 100%;
+  flex-direction: column;
 }
-.drop-line .container-drop .controll-drop #input-drop{
-  height: 40px;
-  width: 200px;
-  background-color: #cdc8c8;
+#drop-form {
+  background: rgba(255, 255, 255, 0.3); /* semi-transparent */
+  backdrop-filter: blur(10px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 300px;
+  padding: 10px;
+  gap: 10px;
+  flex-direction: column;
+}
+#drop-form .input-control-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 10px;
+}
+#drop-form textarea[name="message"],
+#drop-form select,
+#drop-form input {
   border: none;
   outline: none;
-  margin: 0 20px;
-  border-radius: 20px;
+  border-radius: 4px;
 }
-.drop-line .container-drop .controll-drop .btn-drop{}
-
-
-
-
+#drop-form input {
+  border-radius: 4px;
+  min-width: 200px;
+  flex: 1;
+  height: 25px;
+}
+#drop-form select {
+  border-radius: 4px;
+  width: 100%;
+  height: 25px;
+}
+#drop-form textarea[name="message"] {
+  height: 25px;
+  width: 100%;
+  resize: vertical;
+}
+#drop-form .drop-line-submit {
+  width: 100%;
+  height: 25px;
+  background-color: red;
+}
 
 /* star footer */
 
