--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -146,8 +146,8 @@ header {
 .translate {
   transform: translateX(140px);
 }
-  /* .list-items .itemNav, */
-  .list-items .item {
+/* .list-items .itemNav, */
+.list-items .item {
   height: 30px;
   line-height: 40px;
   width: 75px;
@@ -234,7 +234,7 @@ header {
   position: absolute;
   /* top: 100px; */
   left: 50%;
-  background-image: url(/assets/imgs/chap.png);
+  background-image: url(./assets/imgs/chap.png);
   background-size: cover;
 }
 .scrooling {
@@ -415,6 +415,27 @@ main .section-home {
     transform: translateY(0);
   }
 }
+
+/* section section-about-me */
+
+.about-me-container {
+  width: 85%;
+  margin: auto;
+  background-color: red;
+  min-height: 70%;
+  border-radius: 4px;
+}
+.about-me-container .title-about-me {
+  font-size: 23px;
+  letter-spacing: 1.5px;
+  padding: 20px 10px;
+}
+.about-me-container p {
+  font-size: 18px;
+  letter-spacing: 1px;
+  padding: 20px 10px;
+}
+
 /* section about */
 .section-about {
   width: 100%;
